--- a/css/skin.css
+++ b/css/skin.css
@@ -364,3 +364,10 @@ button{
     position: relative;
     z-index:20000 !important;
 }
+
+.triangle{
+    color:white;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    text-align: center;
+}
